--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="../images/myVourseCille-icon.png"
+      type="image/icon type"
+    />
     <title>myVourseCille</title>
   </head>
   <body></body>
