--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
-      href="../images/myVourseCille-icon.png"
+      href="/images/myVourseCille-icon.png"
       type="image/icon type"
     />
     <title>myVourseCille</title>
@@ -14,7 +14,7 @@
   <body class="myVourseCille-body">
     <header class="myVourseCille-logo">
       <img
-        src="../images/myVourseCille-logo.png"
+        src="/images/myVourseCille-logo.png"
         class="myVourseCille-logo-img"
       />
     </header>
@@ -23,9 +23,13 @@
       <div class="myVourseCille-login myVourseCille-form">
         <header>Login</header>
         <form action="#">
-          <input type="text" placeholder="Enter your email" />
-          <input type="password" placeholder="Enter your password" />
-          <input type="button" class="button" value="Login" />
+          <input type="text" placeholder="Enter your email" id="login-email" />
+          <input
+            type="password"
+            placeholder="Enter your password"
+            id="login-password"
+          />
+          <button class="button" id="login-button">Login</button>
         </form>
         <div class="myVourseCille-form-footer">
           <span class="signup"
@@ -37,10 +41,23 @@
       <div class="myVourseCille-registration myVourseCille-form">
         <header>Sign Up</header>
         <form action="#">
-          <input type="text" placeholder="Enter your email" />
-          <input type="password" placeholder="Create a password" />
+          <input
+            type="text"
+            placeholder="Enter your email"
+            id="register-email"
+          />
+          <input
+            type="text"
+            placeholder="Create your username"
+            id="register-username"
+          />
+          <input
+            type="password"
+            placeholder="Create a password"
+            id="register-password"
+          />
           <input type="password" placeholder="Confirm your password" />
-          <input type="button" class="button" value="Sign up" />
+          <button class="button" id="register-button">Sign up</button>
         </form>
         <div class="myVourseCille-form-footer">
           <span class="login"
