Add Register Username and Confirm Password Validation

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
               placeholder="Enter your email"
               id="register-email"
             />
-            <div id="register-email-error-message" class="error-message">
-              Hello XD!
-            </div>
+            <div id="register-email-error-message" class="error-message"></div>
           </div>
           <div class="input">
             <input
@@ -71,9 +69,10 @@
               placeholder="Create your username"
               id="register-username"
             />
-            <div id="register-username-error-message" class="error-message">
-              Hello XD!
-            </div>
+            <div
+              id="register-username-error-message"
+              class="error-message"
+            ></div>
           </div>
           <div class="input">
             <input
@@ -81,9 +80,10 @@
               placeholder="Create a password"
               id="register-password"
             />
-            <div id="register-password-error-message" class="error-message">
-              Hello XD!
-            </div>
+            <div
+              id="register-password-error-message"
+              class="error-message"
+            ></div>
           </div>
           <div class="input">
             <input
@@ -92,11 +92,9 @@
               id="register-checkpassword"
             />
             <div
-              id="register-confirmpassword-error-message"
+              id="register-checkpassword-error-message"
               class="error-message"
-            >
-              Hello XD!
-            </div>
+            ></div>
           </div>
           <button class="button" id="register-button">Sign Up</button>
         </form>
@@ -110,7 +108,6 @@
     </main>
     <footer class="myVourseCille-footer">
       <div class="myVourseCille-version">Version 0.0.0.1</div>
-      <div class="myVourseCille-text">myCourseVille Parody XD</div>
     </footer>
   </body>
   <script src="script.js"></script>
