Button for Clearing Register Form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="myVourseCille-form-footer">
           <span class="signup"
             >Don't have an account?
-            <label for="check">Sign Up</label>
+            <label for="check" id="goto-register-btn">Sign Up</label>
           </span>
         </div>
       </div>
@@ -101,7 +101,7 @@
         <div class="myVourseCille-form-footer">
           <span class="login"
             >Already have an account?
-            <label for="check">Login</label>
+            <label for="check" id="goto-login-btn">Login</label>
           </span>
         </div>
       </div>
