--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
       <div class="myVourseCille-version">Version 0.0.0.1</div>
     </footer>
   </body>
-  <script src="script.js"></script>
+  <script src="js/register.js"></script>
+  <script src="js/login.js"></script>
 </html>
