Login Form Validation + Util File

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
         <form action="#">
           <div class="input">
             <input
-              type="email"
+              type="text"
               placeholder="Enter your email"
               id="login-email"
             />
-            <div id="login-email-error-message" class="error-message">
-              Hello!
-            </div>
+            <div id="login-email-error-message" class="error-message"></div>
           </div>
           <div class="input">
             <input
@@ -39,9 +37,7 @@
               placeholder="Enter your password"
               id="login-password"
             />
-            <div id="login-email-error-message" class="error-message">
-              Hello!
-            </div>
+            <div id="login-password-error-message" class="error-message"></div>
           </div>
           <button class="button" id="login-button">Login</button>
         </form>
@@ -110,6 +106,7 @@
       <div class="myVourseCille-version">Version 0.0.0.1</div>
     </footer>
   </body>
+  <script src="js/util.js"></script>
   <script src="js/register.js"></script>
   <script src="js/login.js"></script>
 </html>
