Check Matching between Email and Password

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             />
             <div id="login-password-error-message" class="error-message"></div>
           </div>
+          <div id="login-match-emailpassword-error" class="error-message"></div>
           <button class="button" id="login-button">Login</button>
         </form>
         <div class="myVourseCille-form-footer">
