Create home file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       type="image/icon type"
     />
     <title>myVourseCille</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body class="myVourseCille-body">
     <header class="myVourseCille-logo">
